--- a/style.css
+++ b/style.css
@@ -1,19 +1,235 @@
-[userWeather]{
-    background-color: gray;
+*,*::before,*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Merriweather Sans', sans-serif;
+    overflow-x: hidden;
 }
 
-.loading-container{
-    display: none;
+:root {
+    --colorDark1: #112D4E;
+    --colorDark2: #3F72AF;
+    --colorLight1: #DBE2EF;
+    --colorLight2: #F9F7F7;
+}
+
+.wrapper{
+    width: 100vw;
+    
+    height: 100vh;
+    color: var(--colorLight2);
+    background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
+}
+
+h1{
+    text-align: center;
+    padding-top: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.tab-container{
+    margin-top: 5rem;
+    display: flex;
+    width: 550px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: 5rem;
+}
+
+.tab{
+    padding: 0.5rem 1rem;
+    border-radius: 0.325rem;
+    cursor: pointer;
+}
+
+[userWeather]{
+    background-color: #dbe2ef6f;
+
 }
 
 .grant-access-container{
     display: none;
+    /* display: flex; */
+    flex-direction: column;
+    width: 550px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.grant-access-container img{
+    width: 75px;
+    height: 75px;
+    margin-top: 3rem;
+}
+
+.grant-access-container h3{
+    font-size: 2rem;
+    margin-top: 3rem;
+}
+
+.grant-access-container p{
+    margin-top: 1.5rem;
+}
+
+.grant-access-btn{
+    all: unset;
+    margin-top: 1.5rem;
+    background-color: var(--colorDark2);
+    padding: 0.5rem 1.5rem;
+    border-radius: 0.325rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.loading-container{
+    display: none;
+    /* display: flex; */
+    align-items: center;
+    flex-direction: column;
+} 
+
+.loading-container img{
+    margin-top: 3rem;
+    width: 200px;
+}
+
+.loading-container p{
+    text-transform: uppercase;
 }
 
 .search-weather-container{
     display: none;
+    /* display: flex; */
+    width: 550px;
+    margin: 0 auto;
+    align-items: center;
+    margin-top: 3rem;
+    gap: 10px;
+}
+
+#search-bar{
+    all: unset;
+    width: calc(100% - 80px);
+    height: 2.5rem;
+    border-radius: 0.75rem;
+    background-color: #dbe2ef6f;
+    color: var(--colorLight2);
+    padding-left: 1rem;
+}
+
+#search-bar:focus{
+    border: 2px solid var(--colorLight1);
+}
+
+#search-bar::placeholder{
+    /* padding-left: 1rem; */
+    color: var(--colorLight1);
+}
+
+.search-weather-container button{
+    all: unset;
+    /* width: 40px; */
+}
+
+#search-btn{
+    padding: 10px;
+    border-radius: 100%;
+    background-color: var(--colorDark2);
+    width: 40px;
+    cursor: pointer;
 }
 
 .weather-container{
     display: none;
+    /* display: flex; */
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 3rem;
+    padding-bottom: 3rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+.city-container{
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.city-container p{
+    font-size: 2rem;
+    font-weight: 300;
+}
+
+.city-container img{
+    object-fit: contain;
+    width: 30px;
+    height: 30px;
+}
+
+.weather-desc{
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+
+.weather-icon{
+    width: 5rem;
+}
+
+.weather-temp{
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.parameter-container{
+    display: flex;
+    gap: 1rem;
+    
+}
+
+.parameter{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 0.75rem;
+    gap: 0.5rem;
+    width: 200px;
+    height: 150px;
+    /* padding: 1.75rem 3rem; */
+    background-color: #dbe2ef90;
+}
+
+.parameter img{
+    width: 3rem;
+}
+
+.parameter-text{
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+.parameter p:last-of-type{
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+.error{
+    display: none;
+    margin: 0 auto;
+    width: 550px;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5rem;
+}
+
+.error img{
+    width: 300px;
 }
