--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@
     background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
 }
 
+.container{
+    /* max-width: 550px; */
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
+
 h1{
     text-align: center;
     padding-top: 2rem;
@@ -31,7 +39,8 @@ h1{
 .tab-container{
     margin-top: 5rem;
     display: flex;
-    width: 550px;
+    max-width: 550px;
+    width: 90%;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
@@ -53,8 +62,10 @@ h1{
     display: none;
     /* display: flex; */
     flex-direction: column;
-    width: 550px;
+    max-width: 550px;
+    width: 90%;
     margin: 0 auto;
+    justify-content: center;
     align-items: center;
 }
 
@@ -86,8 +97,12 @@ h1{
 
 .loading-container{
     display: none;
+    max-width: 550px;
+    width: 90%;
     /* display: flex; */
     align-items: center;
+    margin: 0 auto;
+    justify-content: center;
     flex-direction: column;
 } 
 
@@ -103,7 +118,8 @@ h1{
 .search-weather-container{
     display: none;
     /* display: flex; */
-    width: 550px;
+    max-width: 550px;
+    width: 90%;
     margin: 0 auto;
     align-items: center;
     margin-top: 3rem;
@@ -127,6 +143,7 @@ h1{
 #search-bar::placeholder{
     /* padding-left: 1rem; */
     color: var(--colorLight1);
+    font-size: 1em;
 }
 
 .search-weather-container button{
@@ -135,10 +152,10 @@ h1{
 }
 
 #search-btn{
-    padding: 10px;
+    padding: 0.6rem;
     border-radius: 100%;
     background-color: var(--colorDark2);
-    width: 40px;
+    width: 2.5rem;
     cursor: pointer;
 }
 
@@ -189,6 +206,8 @@ h1{
 
 .parameter-container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
     
 }
